[package]
name = "semantic_rl_fuzzer"
version = "0.1.0"
edition = "2021"
description = "A semantic, Reinforcement Learning-guided fuzzing framework."
repository = "https://github.com/huynq55-v3/semantic_rl_fuzzer"
keywords = ["fuzzing", "ai", "reinforcement-learning", "testing"]
categories = ["development-tools::testing"]

[dependencies]
rand = "0.10.0"
burn = { version = "0.20.1", optional = true }

[features]
default = []
burn-backend = ["burn"]
