[package]
name = "semantic_rl_fuzzer"
version = "0.1.0"
edition = "2021"
description = "A semantic, Reinforcement Learning-guided fuzzing framework."
repository = "https://github.com/huynq55-v3/semantic_rl_fuzzer"
keywords = ["fuzzing", "ai", "reinforcement-learning", "testing"]
categories = ["development-tools::testing"]

[dependencies]
burn = { version = "0.20.1", features = ["ndarray", "train", "autodiff"], optional = true }
ndarray = { version = "0.17.2", features = ["rayon"] }
rand = "0.10.0"
rayon = "1.11.0"

[features]
default = []
burn-backend = ["burn"]
